Fix alignment of TWCC Dublin logo.

--- a/docs/css/twcc.css
+++ b/docs/css/twcc.css
@@ -23,3 +23,8 @@ li.member-name {
   list-style-type: none;
   text-align: center;
 }
+
+.dublin-logo {
+  max-width: 400px;
+  padding: 20px;
+}
